@@ -4,7 +4,7 @@
  *
  * This file contains code for the NickServ MYACCESS function.
  *
- * $Id: myaccess.c 2557 2005-10-04 06:44:30Z pfish $
+ * $Id: myaccess.c 2563 2005-10-04 07:09:30Z pfish $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"nickserv/myaccess", FALSE, _modinit, _moddeinit,
-	"$Id: myaccess.c 2557 2005-10-04 06:44:30Z pfish $",
+	"$Id: myaccess.c 2563 2005-10-04 07:09:30Z pfish $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -25,12 +25,15 @@ list_t *ns_cmdtree, *ns_helptree;
 void _modinit(module_t *m)
 {
 	ns_cmdtree = module_locate_symbol("nickserv/main", "ns_cmdtree");
+	ns_helptree = module_locate_symbol("nickserv/main", "ns_helptree");
 	command_add(&ns_myaccess, ns_cmdtree);
+	help_addentry(ns_helptree, "MYACCESS", "help/nickserv/myaccess", NULL);
 }
 
 void _moddeinit()
 {
 	command_delete(&ns_myaccess, ns_cmdtree);
+	help_delentry(ns_helptree, "MYACCESS");
 }
 
 static void ns_cmd_myaccess(char *origin)
